# invoice_pdf_generator

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
app/invoice_generator/: calculator.py  core.py  gui.py  loader.py  main.py  pdf_renderer.py
app/scripts/: build_exe.py  run_app.py
data/: clients.csv
data/items/: 2026-05.csv
docs/: CORE.md  GUI.md  design_reference.html
tests/: conftest.py  test_calculator.py
