[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-generator"
version = "0.1.0"
description = "月次請求書 一括PDF生成ツール（取引先一覧CSV + 当月明細CSV → 取引先ごとのPDF）"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Invoice Generator Project" }]
dependencies = [
    "reportlab>=4.0",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[project.scripts]
invoice-generator = "invoice_generator.main:main"

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
